k8s/kong/Kong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kong
          image: kong:3.6
          command: [/bin/sh, /kong/template/start-kong.sh]
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
          volumeMounts:
            - name: kong-config
              mountPath: /kong/template
              readOnly: true
            - name: kong-runtime
              mountPath: /kong/runtime
      volumes:
        - name: kong-config
          configMap:
            name: kong-declarative-config
        - name: kong-runtime
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  selector:
    app: kong
  type: NodePort
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
      nodePort: 30090
